[sony] Migrate to oopenHAB 4.3
Signed-off-by: Alexander Falkenstern <alexander.falkenstern@gmail.com>